# LTL-Fuzzer

./: .gitignore  CMakeLists.txt  README.md  build_proto.sh
experiment/CS6215/: README.md
experiment/CS6215/cmd/example/: README.md
experiment/CS6215/cmd/fuzz/: README.md
experiment/CS6215/cmd/fuzz/event/: events.go
experiment/CS6215/cmd/fuzz/trace/: trace_true_10_true.txt
experiment/CS6215/trace-evaluator/: README.md  go.mod  main.go
experiment/CS6215/trace-evaluator/client/: client.go
experiment/CS6215/trace-evaluator/cmd/example/: README.md  main.go
experiment/CS6215/trace-evaluator/cmd/fuzz/: README.md  example.go  example_test.go
experiment/CS6215/trace-evaluator/cmd/fuzz/event/: load.go  log.go
experiment/CS6215/trace-evaluator/cmd/fuzz/trace/: trace_true_10_false.txt
experiment/CS6215/trace-evaluator/proto/: ltlfuzz.proto
experiment/CS6215/trace-evaluator/scripts/: build_proto.sh
include/: automata.h  generateUUID.h
proto/: ltlfuzz.proto
scripts/: build_proto_cpp.sh
src/: CMakeLists.txt
src/automata/: automata.cc
src/grpc/: CMakeLists.txt  README.md  ltlfuzzServiceImpl.cc  main.cc
